<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    tools:context="app.CalcularComidaAnimal.CalculoComidaAnimalesActivity"
    android:background="@color/app_comida_mascotas_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <androidx.cardview.widget.CardView
            android:id="@+id/cvDog"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="7dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/app_comida_mascotas_cadview"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dog"
                    android:gravity="center"
                    android:textColor="@color/app_comida_mascotas_text"
                    android:textSize="30dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:src="@drawable/dog"
                    app:tint="@color/app_comida_mascotas_text"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCat"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="7dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/app_comida_mascotas_cadview"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cat"
                    android:gravity="center"
                    android:textColor="@color/app_comida_mascotas_text"
                    android:textSize="30dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:src="@drawable/cat"
                    app:tint="@color/app_comida_mascotas_text"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cadview"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/app_comida_mascotas_text"
                android:text="@string/weight"
                android:textSize="25dp"
                android:textAllCaps="true"/>
            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultValueWeight"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textColor="@color/app_comida_mascotas_text"/>
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueTo="70"
                android:valueFrom="1"
                android:stepSize="1"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cadview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/age"
                android:textSize="26dp"
                android:textAllCaps="true"
                android:textColor="@color/app_comida_mascotas_text"/>
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/defaultAge"
                android:textSize="26dp"
                android:textAllCaps="true"
                android:textColor="@color/app_comida_mascotas_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabDecrementAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/minus"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabIncrementAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:src="@drawable/plus"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/app_comida_mascotas_cadview">
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/app_comida_mascotas_text"
            android:layout_marginVertical="5dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>